--- a/src/styles/atoms/_list.scss
+++ b/src/styles/atoms/_list.scss
@@ -1,7 +1,7 @@
 .list {
     display: grid;
-    column-gap: 2.5rem;
-    row-gap: 2rem;
+    column-gap: 3rem;
+    row-gap: 3rem;
     margin-bottom: 96px;
     max-width: 600px;
 }
