--- a/src/styles/components/_projects.scss
+++ b/src/styles/components/_projects.scss
@@ -32,7 +32,7 @@
 #projects h3 {
   margin-bottom: var(--space-small);
   margin: 0;
-  font-size: 0.9rem;
+  font-size: 1rem;
 }
 
 #projects {
@@ -78,9 +78,9 @@
   text-align: center;
 }
 
-@media screen and (min-width: 960px) {
+@media screen and (min-width: 1100px) {
   #projects .list {
     grid-template-columns: 1fr 1fr 1fr;
-    row-gap: 20px;
+    row-gap: 2rem;
 }
 }
